Revert "Fixed the overlapping on scroll of login page."

--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
     ></script>
   </head>
   <body>
-    <header class="navbar1">
+    <header class="header">
       <img
         src="favicon_new.png"
         alt="logo"
@@ -36,9 +36,10 @@
       </a>
 
       <i class="bx bx-menu" id="menu-icon"></i>
-      <nav class="navbar2">
+      <nav class="navbar">
         <a href="index.html#home" class="active"
-          ><i class="fa-solid fa-house"></i> Home</a>
+          ><i class="fa-solid fa-house"></i> Home</a
+        >
         <a href="index.html#about"
           ><i class="fa-solid fa-circle-info"></i> About</a
         >
