Hover effect to quicklinks is added to all pages now & FAQ is added to Quicklinks of blog page

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
             <a href="blogpage.html"><p>Blogs</p></a>
           </li>
           <li>
-            <a href="faqpage.html"><p>FAQ</p></a>
+            <a href="faqpage.html"><p>FAQs</p></a>
           </li>
           <li>
             <a href="#Resource Library"><p>Resource Library</p></a>
