add terrace farming blog page in blog section

--- a/blogpage.html
+++ b/blogpage.html
@@ -395,6 +395,21 @@
          
         </div>    
       </div>
+      <div class="fcard z2"onclick="window.location.href='https://timesagriculture.com/terrace-farming-definition-history-types-and-benefits-a-complete-overview/#:~:text=Terrace%20farming%20is%20a%20method,areas%20with%20limited%20flat%20terrain';">
+        <img class="agrblg" src="https://c4.wallpaperflare.com/wallpaper/67/164/35/terrace-farming-agriculture-8k-4k-wallpaper-preview.jpg">
+        <div class="article">
+          <a href="">Blog</a>
+          <h2>Terrace Farming</h2>
+          <p> Terrace farming is an ancient technique that creates stepped levels on hilly terrains to prevent soil erosion and manage water efficiently. Widely used in regions like the Andes and Himalayas, it allows the cultivation of crops such as rice and vegetables. This method enhances arable land, supports local food security, and offers ecological benefits like preserving biodiversity.</p>
+        
+          <div class="day">
+            <ul>
+              <li class="date"><p class="tim">February 24, 2024</p> </li>
+               <li class="time"><p class="tim">5 months ago</p></li>
+              </ul>
+            </div>
+        </div>    
+      </div> 
 
     </section>
     <footer class="footer">
