created a merchandised webpage for agricultural equipments

--- a/login.html
+++ b/login.html
@@ -55,6 +55,9 @@
         <a href="index.html#contact" id="nav--contact"
           ><i class="fa-solid fa-phone"></i> Contact</a
         >
+        <a href="buy_products.html"
+            ><i class="fa fa-shopping-cart"></i>Buy Products</a
+          >
       </nav>
     </header>
 
