--- a/faqpage.html
+++ b/faqpage.html
@@ -31,7 +31,7 @@
       <a href="index.html#about"><i class="fa-solid fa-circle-info"></i> About</a>
       <a href="blogpage.html" target="_self"><i class="fa-solid fa-blog"></i> Blogs</a>
       <a href="index.html#Resource Library"><i class="fa-solid fa-book"></i> Resource Library</a>
-      <a href="faqpage.html" class="active"><i class="fas fa-question-circle"></i>FAQ</a>
+      <a href="faqpage.html" class="active"><i class="fas fa-question-circle"></i>FAQs</a>
       <a href="index.html#contact" id="nav--contact"><i class="fa-solid fa-phone"></i> Contact</a>
       <a href="login.html">
         <button id="log-in-btn" class="login-btn">Login</button>
