the required changes were made

--- a/buy_products.html
+++ b/buy_products.html
@@ -27,7 +27,8 @@
             <i class="fas fa-moon"></i>
           </div>
          </a>
-        <nav class="navbar">
+         <i class="bx bx-menu" id="menu-icon"></i>
+        <nav class="navbar active">
           <a href="index.html#home" class="active content"
             ><i class="fa-solid fa-house"></i> Home</a>
           <a href="index.html#about"><i class="fa-solid fa-circle-info"></i> About</a>
