added favicon in uy_products page

--- a/buy_products.html
+++ b/buy_products.html
@@ -8,6 +8,8 @@
 
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
     <script src="https://kit.fontawesome.com/b08b6de27e.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="favicon_new.png" type="image/x-icon" />
+
 </head>
 <body>
     <header class="header">
