--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@
               class="slide"
               style="background-image: url(./images/carousel-img-4.jpg)"
             ></div>
+            <div
+              class="slide"
+              style="background-image: url(./images/carousel-img-2.jpg)"
+            ></div>  <!--duplicate of the first image-->
             <!-- <div class="slide" style="background-image: url(./images/carousel-img-5.jpg)"></div> -->
           </div>
         </div>
