--- a/faqpage.html
+++ b/faqpage.html
@@ -80,163 +80,168 @@
     </div> -->
 
     <section class="faqq">
-      <div class="image" data-aos="fade-right">
-        <img class="faq-img" src="./faq/FAQ.png" alt="FAQ" />
-      </div>
-      <div class="container">
-        <div class="accordion">
-          <h1 class="section-title">FAQ</h1>
-          <div class="accordion-item" aria-expanded="false">
-            <button>
-              <span>What is AgriLearnNetwork?</span>
-              <span class="icon">+</span>
-            </button>
-            <div class="line"></div>
-            <div class="accordion-content">
-              <p>
-                AgriLearnNetwork is a comprehensive platform dedicated to
-                empowering farmers by providing essential insights, resources,
-                and strategic management approaches for successful agriculture
-                practices. Our platform offers detailed guidance and in-depth
-                knowledge across various facets of farming.
-              </p>
+      <div class="faq_heading">Frequently Asked Questions (FAQ)</div>
+      <div class="faqqq">
+        <div class="image" data-aos="fade-right">
+          <img class="faq-img" src="./faq/FAQ.png" alt="FAQ" />
+        </div>
+        <div class="container">
+          <div class="accordion">
+            <div class="accordion-item" aria-expanded="false">
+              <button>
+                <span>What is AgriLearnNetwork?</span>
+                <span class="icon">+</span>
+              </button>
+              <div class="line"></div>
+              <div class="accordion-content">
+                <p>
+                  AgriLearnNetwork is a comprehensive platform dedicated to
+                  empowering farmers by providing essential insights, resources,
+                  and strategic management approaches for successful agriculture
+                  practices. Our platform offers detailed guidance and in-depth
+                  knowledge across various facets of farming.
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="accordion-item" aria-expanded="false">
-            <button>
-              <span>Who can benefit from AgriLearnNetwork?</span>
-              <span class="icon">+</span>
-            </button>
-            <div class="line"></div>
-            <div class="accordion-content">
-              <p>
-                AgriLearnNetwork is designed for farmers of all scales,
-                agricultural enthusiasts, researchers, and anyone involved in
-                the agriculture industry. It caters to both beginners and
-                experienced farmers looking to enhance their farming practices.
-              </p>
+            <div class="accordion-item" aria-expanded="false">
+              <button>
+                <span>Who can benefit from AgriLearnNetwork?</span>
+                <span class="icon">+</span>
+              </button>
+              <div class="line"></div>
+              <div class="accordion-content">
+                <p>
+                  AgriLearnNetwork is designed for farmers of all scales,
+                  agricultural enthusiasts, researchers, and anyone involved in
+                  the agriculture industry. It caters to both beginners and
+                  experienced farmers looking to enhance their farming
+                  practices.
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="accordion-item" aria-expanded="false">
-            <button>
-              <span>What features does AgriLearnNetwork offer?</span>
-              <span class="icon">+</span>
-            </button>
-            <div class="line"></div>
+            <div class="accordion-item" aria-expanded="false">
+              <button>
+                <span>What features does AgriLearnNetwork offer?</span>
+                <span class="icon">+</span>
+              </button>
+              <div class="line"></div>
 
-            <div class="accordion-content">
-              <p>
-                AgriLearnNetwork offers a wide range of features, including:
-                1.Detailed farming guides 2.Crop and livestock management tips
-                3.Weather forecasting tools 4.Market price updates 5.Expert
-                advice and consultancy services 6.Community forums for peer
-                support 7.Access to research and best practices in agriculture
-              </p>
+              <div class="accordion-content">
+                <p>
+                  AgriLearnNetwork offers a wide range of features, including:
+                  1.Detailed farming guides 2.Crop and livestock management tips
+                  3.Weather forecasting tools 4.Market price updates 5.Expert
+                  advice and consultancy services 6.Community forums for peer
+                  support 7.Access to research and best practices in agriculture
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="accordion-item" aria-expanded="false">
-            <button>
-              <span>What types of farming does AgriLearnNetwork support?</span>
-              <span class="icon">+</span>
-            </button>
-            <div class="line"></div>
+            <div class="accordion-item" aria-expanded="false">
+              <button>
+                <span
+                  >What types of farming does AgriLearnNetwork support?</span
+                >
+                <span class="icon">+</span>
+              </button>
+              <div class="line"></div>
 
-            <div class="accordion-content">
-              <p>
-                AgriLearnNetwork supports a wide range of farming practices,
-                including crop farming, livestock farming,aquaculture, and
-                agroforestry. We provide tailored resources and guidance for
-                each type of farming.
-              </p>
+              <div class="accordion-content">
+                <p>
+                  AgriLearnNetwork supports a wide range of farming practices,
+                  including crop farming, livestock farming,aquaculture, and
+                  agroforestry. We provide tailored resources and guidance for
+                  each type of farming.
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="accordion-item" aria-expanded="false">
-            <button>
-              <span>Is AgriLearnNetwork free to use?</span>
-              <span class="icon">+</span>
-            </button>
-            <div class="line"></div>
+            <div class="accordion-item" aria-expanded="false">
+              <button>
+                <span>Is AgriLearnNetwork free to use?</span>
+                <span class="icon">+</span>
+              </button>
+              <div class="line"></div>
 
-            <div class="accordion-content">
-              <p>
-                Yes, AgriLearnNetwork offers free access to most of our
-                resources and tools. However, we also provide premium content
-                and services which are available for a subscription fee.
-              </p>
+              <div class="accordion-content">
+                <p>
+                  Yes, AgriLearnNetwork offers free access to most of our
+                  resources and tools. However, we also provide premium content
+                  and services which are available for a subscription fee.
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="accordion-item" aria-expanded="false">
-            <button>
-              <span
-                >Can I get personalized advice from experts on Agrilearn
-                Network?</span
-              >
-              <span class="icon">+</span>
-            </button>
-            <div class="line"></div>
+            <div class="accordion-item" aria-expanded="false">
+              <button>
+                <span
+                  >Can I get personalized advice from experts on Agrilearn
+                  Network?</span
+                >
+                <span class="icon">+</span>
+              </button>
+              <div class="line"></div>
 
-            <div class="accordion-content">
-              <p>
-                Yes, AgriLearnNetwork offers personalized advice from
-                agricultural experts. You can book one-on-one consultation
-                sessions to discuss specific issues and get tailored solutions
-              </p>
+              <div class="accordion-content">
+                <p>
+                  Yes, AgriLearnNetwork offers personalized advice from
+                  agricultural experts. You can book one-on-one consultation
+                  sessions to discuss specific issues and get tailored solutions
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="accordion-item" aria-expanded="false">
-            <button>
-              <span
-                >How can I stay updated with the latest agricultural trends and
-                news?</span
-              >
-              <span class="icon">+</span>
-            </button>
-            <div class="line"></div>
+            <div class="accordion-item" aria-expanded="false">
+              <button>
+                <span
+                  >How can I stay updated with the latest agricultural trends
+                  and news?</span
+                >
+                <span class="icon">+</span>
+              </button>
+              <div class="line"></div>
 
-            <div class="accordion-content">
-              <p>
-                To stay updated with the latest agricultural trends and news,
-                you can subscribe to our newsletter. Additionally, our platform
-                regularly updates its blog and news section with relevant
-                articles and information
-              </p>
+              <div class="accordion-content">
+                <p>
+                  To stay updated with the latest agricultural trends and news,
+                  you can subscribe to our newsletter. Additionally, our
+                  platform regularly updates its blog and news section with
+                  relevant articles and information
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="accordion-item" aria-expanded="false">
-            <button>
-              <span
-                >Does AgriLearnNetwork offer any training programs or
-                courses?</span
-              >
-              <span class="icon">+</span>
-            </button>
-            <div class="line"></div>
+            <div class="accordion-item" aria-expanded="false">
+              <button>
+                <span
+                  >Does AgriLearnNetwork offer any training programs or
+                  courses?</span
+                >
+                <span class="icon">+</span>
+              </button>
+              <div class="line"></div>
 
-            <div class="accordion-content">
-              <p>
-                Yes, AgriLearnNetwork offers a variety of training programs and
-                courses covering different aspects of farming. These programs
-                are designed to enhance your knowledge and skills in
-                agriculture.
-              </p>
+              <div class="accordion-content">
+                <p>
+                  Yes, AgriLearnNetwork offers a variety of training programs
+                  and courses covering different aspects of farming. These
+                  programs are designed to enhance your knowledge and skills in
+                  agriculture.
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="accordion-item" aria-expanded="false">
-            <button>
-              <span
-                >How do I participate in community forums on
-                AgriLearnNetwork?</span
-              >
-              <span class="icon">+</span>
-            </button>
-            <div class="line"></div>
-            <div class="accordion-content">
-              <p>
-                To participate in community forums, you need to log in to your
-                AgriLearnNetwork account and navigate to the forums section. You
-                can post questions, share experiences, and engage with other
-                community members.
-              </p>
+            <div class="accordion-item" aria-expanded="false">
+              <button>
+                <span
+                  >How do I participate in community forums on
+                  AgriLearnNetwork?</span
+                >
+                <span class="icon">+</span>
+              </button>
+              <div class="line"></div>
+              <div class="accordion-content">
+                <p>
+                  To participate in community forums, you need to log in to your
+                  AgriLearnNetwork account and navigate to the forums section.
+                  You can post questions, share experiences, and engage with
+                  other community members.
+                </p>
+              </div>
             </div>
           </div>
         </div>
