--- a/blogpage.html
+++ b/blogpage.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="favicon_new.png"  type="image/png"/>
+    <link rel="icon" href="icon.png"  type="image/png"/>
     <link rel="stylesheet" href="blogpagestyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/fb940be696.js" crossorigin="anonymous"></script>
@@ -54,7 +54,7 @@
         </span>
     </a> -->
       <img
-        src="favicon_new.png"
+        src="icon.png"
         alt="logo"
         style="height: 50px; width: 50px; margin-right: 10px"
       />
