--- a/buy_products.html
+++ b/buy_products.html
@@ -8,13 +8,13 @@
 
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
     <script src="https://kit.fontawesome.com/b08b6de27e.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="favicon_new.png" type="image/x-icon" />
+    <link rel="icon" href="icon.png" type="image/x-icon" />
 
 </head>
 <body>
     <header class="header">
         <img
-          src="favicon_new.png"
+          src="icon.png"
           alt="logo"
           style="height: 50px; width: 50px; margin-right: 10px;"
         />
