--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
     />
     <link rel="stylesheet" href="style.css" />
 
-    <link rel="icon" href="favicon_new.png" type="image/x-icon" />
+    <link rel="icon" href="icon.png" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <link rel="stylesheet" href="./cursor/style.css">
     <script
@@ -27,7 +27,7 @@
   <body>
     <header class="header">
       <img
-        src="favicon_new.png"
+        src="icon.png"
         alt="logo"
         style="height: 50px; width: 50px; margin-right: 10px"
       />
