Sets proper fonts size to FAQs

--- a/faqpage.html
+++ b/faqpage.html
@@ -83,14 +83,14 @@
               <h3>What features does AgriLearnNetwork offer?</h3>
             </div>
             <div class="accordion-body">
-              <p>AgriLearnNetwork offers a wide range of features, including:
-                1.Detailed farming guides
-                2.Crop and livestock management tips
-                3.Weather forecasting tools
-                4.Market price updates
-                5.Expert advice and consultancy services
-                6.Community forums for peer support
-                7.Access to research and best practices in agriculture
+              <p>AgriLearnNetwork offers a wide range of features, including:<br>
+                1.Detailed farming guides<br>
+                2.Crop and livestock management tips<br>
+                3.Weather forecasting tools<br>
+                4.Market price updates<br>
+                5.Expert advice and consultancy services<br>
+                6.Community forums for peer support<br>
+                7.Access to research and best practices in agriculture<br>
               </p>
             </div>
           </div>
