--- a/blogpage.html
+++ b/blogpage.html
@@ -16,31 +16,7 @@
     <link rel="stylesheet" href="./cursor/style.css">
    
     <title>AgroBlogs</title>
-    <style>
-      #scrollToTopBtn {
-    display: none; 
-    position: fixed; 
-    bottom: 20px;
-    right: 30px;
-    z-index: 99; 
-    border: none;
-    outline: none; 
-    background-color: #ff7d1f; 
-    color: white; 
-    cursor: pointer; 
-    padding: 15px;
-    border-radius: 50%; 
-    font-size: 18px;
-    transition: background-color 0.3s;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); 
-}
 
-#scrollToTopBtn:hover {
-    background-color: #555;
-    color: #ff7d1f; 
-}
-    </style>
-    
   </head>
   <body>
     <div class="cursor"></div>
@@ -485,32 +461,21 @@
         </p>
       </div>
     </footer>
-    <button id="scrollToTopBtn" title="Go to top"><i class="fa fa-arrow-up"></i></button>
+    <div  id="backtoTop">
+      <a href="#"><i class="bx bx-up-arrow-alt"></i></a>
+    </div>
     <script src="blog.js"></script>
     <script>
-      document.addEventListener("DOMContentLoaded", function() {
-    // Get the button
-    var scrollToTopBtn = document.getElementById("scrollToTopBtn");
-
-    // When the user scrolls down 20px from the top of the document, show the button
-    window.onscroll = function() {
-        scrollFunction();
-    };
-
-    function scrollFunction() {
-        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-            scrollToTopBtn.style.display = "block";
+      window.addEventListener('scroll', function() {
+        var scrollPosition = window.scrollY;
+        var backToTopButton = document.getElementById('backtoTop');
+      
+        if (scrollPosition > 300) { // Adjust this value as needed to show the button at the desired scroll position
+          backToTopButton.style.display = 'block';
         } else {
-            scrollToTopBtn.style.display = "none";
+          backToTopButton.style.display = 'none';
         }
-    }
-
-    // When the user clicks on the button, scroll to the top of the document
-    scrollToTopBtn.onclick = function() {
-        document.body.scrollTop = 0;
-        document.documentElement.scrollTop = 0;
-    };
-});
+      });
     </script>
     <script src="script.js"></script>
     <script type="text/javascript">
