updated the footer

--- a/index.html
+++ b/index.html
@@ -449,10 +449,14 @@
     <footer class="footer">
       <div class="footer-grid">
         <div class="footer-title">
-          <h2>AgriLearnNetwork</h2>
+          <!-- <link rel="icon" href="icon.png" type="image/x-icon" /> -->
+          <img src="icon.png" height="150px"; width="170px"; style="position: absolute;left: 600px;top: 3480px;">
+          <h2 style="position: absolute;left: 60px;">AgriLearnNetwork</h2>
+          <br><p style="position: absolute;top: 3530px;justify-content: left;left: 50px;">Agrilearn Network provides farmers with essential <br>insights and resources, including crop management,<br> pest control and advanced technologies.<br> It offers expert guidance, research articles<br>, and community support through<br>forums and mentorship programs.</p>
         </div>
-        <div class="footer-icons">
-          <p><b>Follow us on our socials:</b></p>
+        
+        &nbsp;<div class="footer-icons"><br><br>
+          <br><br><p><b>Follow us on our socials:</b></p>
           <div class="socialIcons">
             <a
               href="mailto:AgriLearnNetwork@gmail.com"
@@ -477,30 +481,31 @@
         </div>
       </div>
       <div class="quick-links">
-        <h2>Quick Links</h2>
-        <ul>
-          <li>
-            <a href="#home"><p>Home</p></a>
+      <h2>Quick Links</h2><br><br><br><br>
+        <ul style="position: absolute;left: 850px;padding: 2px;">
+          &nbsp;<li>
+           <a href="#home"><p>Home</p></a>
           </li>
-          <li>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<li>
             <a href="#about"><p>About Us</p></a>
-          </li>
+          </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li>
             <a href="blogpage.html"><p>Blogs</p></a>
-          </li>
+          </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li>
             <a href="faqpage.html"><p>FAQs</p></a>
-          </li>
+          </li>&nbsp;&nbsp;&nbsp;&nbsp;
           <li>
             <a href="#Resource Library"><p>Resource Library</p></a>
-          </li>
+          </li>&nbsp;&nbsp;&nbsp;&nbsp;
           <li>
             <a href="#contact"><p>Contact Us</p></a>
           </li>
         </ul>
       </div>
+      &nbsp;
       <div class="footer-text footer-right">
-        <p style="font-weight: 600; font-size: 15px">
+        &nbsp; &nbsp;<p style="font-weight: 600; font-size: 15px">
           Copyright &copy;
           <script>
             document.write(new Date().getFullYear());
