--- a/buy_products.html
+++ b/buy_products.html
@@ -278,9 +278,12 @@
     <footer class="footer">
       <div class="footer-grid">
         <div class="footer-title">
-          <h2>AgriLearnNetwork</h2>
+          <img src="icon.png" height="150px"; width="170px"; style="position: absolute;left: 600px;top: 2630px;">
+          <h2 style="position: absolute;left: 60px;top: 2610px;">AgriLearnNetwork</h2>
+          <br><p style="position: absolute;top: 2660px;justify-content:left;left: 30px;">Agrilearn Network provides farmers with essential <br>insights and resources, including crop management,<br>pest control and advanced technologies.<br> It offers expert guidance, research articles<br>, and community support through<br>forums and mentorship programs.</p>
         </div>
-        <div class="footer-icons">
+     
+        &nbsp;<div class="footer-icons"><br><br>
           <p><b>Follow us on our socials:</b></p>
           <div class="socialIcons">
             <a
@@ -306,23 +309,23 @@
         </div>
       </div>
       <div class="quick-links">
-        <h2>Quick Links</h2>
-        <ul>
+        <h2>Quick Links</h2><br><br>
+        <ul style="position:absolute;left:870px;padding: 2px;" >
           <li>
             <a href="#home"><p>Home</p></a>
-          </li>
+          </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li>
             <a href="#about"><p>About Us</p></a>
-          </li>
+          </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li>
             <a href="blogpage.html"><p>Blogs</p></a>
-          </li>
+          </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li>
             <a href="faqpage.html"><p>FAQ</p></a>
-          </li>
+          </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li>
             <a href="#Resource Library"><p>Resource Library</p></a>
-          </li>
+          </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li>
             <a href="#contact"><p>Contact Us</p></a>
           </li>
