updated the footer of faqpage and blogpage

--- a/blogpage.html
+++ b/blogpage.html
@@ -402,8 +402,12 @@
     <footer class="footer">
       <div  class="footer-grid">
         <div class="footer-title">
-          <h2>AgriLearnNetwork</h2>
+          <img src="icon.png" height="150px"; width="170px"; style="position: absolute;left: 600px;top: 3170px;">
+          <h2 style="position: absolute;left: 60px;top: 3150px;">AgriLearnNetwork</h2>
+          <br><p style="position: absolute;top: 3200px;justify-content: left;left: 50px;">Agrilearn Network provides farmers with essential <br>insights and resources, including crop management,<br> pest control and advanced technologies.<br> It offers expert guidance, research articles<br>, and community support through<br>forums and mentorship programs.</p>
+        
         </div>
+        &nbsp;&nbsp;&nbsp;
         <div class="footer-icons">
           <p><b>Follow us on our socials:</b></p>
           <div class="socialIcons">
@@ -431,29 +435,29 @@
       </div>
       <div class="quick-links">
       <h2>Quick Links</h2>
-        <ul>
+        <ul style="position: absolute;left: 930px;padding: 2px;top: 3320px;">
           <li>
             <a href="index.html"><p>Home</p></a>
-          </li>
+          </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li>
             <a href="index.html#about"><p>About Us</p></a>
-          </li>
+          </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li>
             <a href="blogpage.html"><p>Blogs</p></a>
-          </li>
+          </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li>
             <a href="faqpage.html"><p>FAQs</p></a>
-          </li>
+          </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li>
             <a href="index.html#Resource Library"><p>Resource Library</p></a>
-          </li>
+          </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li>
             <a href="index.html#contact"><p>Contact Us</p></a>
-          </li>
+          </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         </ul>
       </div>
       <div class="footer-text footer-right">
-        <p style="font-weight: 600; font-size: 15px"> Copyright &copy;
+        <p style="font-weight: 600; font-size: 15px;position: absolute;left: 500px;"> Copyright &copy;
           <script>
             document.write(new Date().getFullYear());
           </script>
