--- a/faqpage.html
+++ b/faqpage.html
@@ -179,8 +179,13 @@
   <footer class="footer">
     <div class="footer-grid">
       <div class="footer-title">
-        <h2>AgriLearnNetwork</h2>
+        <img src="icon.png" height="150px"; width="170px"; style="position: absolute;left: 600px;top: 900px;">
+          <h2 style="position: absolute;left: 60px;top: 870px;">AgriLearnNetwork</h2>
+          <br><p style="position: absolute;top: 930px;justify-content: left;left: 40px;">Agrilearn Network provides farmers with essential <br>insights and resources, including crop management,<br> pest control and advanced technologies.<br> It offers expert guidance, research articles<br>, and community support through<br>forums and mentorship programs.</p>
+        
+       
       </div>
+      &nbsp;&nbsp;
       <div class="footer-icons">
         <p><b>Follow us on our socials:</b></p>
         <div class="socialIcons">
@@ -195,32 +200,32 @@
     </div>
 <div class="quick-links">
       <h2>Quick Links</h2>
-      <ul>
+      <ul style="position: absolute;left: 930px;padding: 2px;top: 1030px;">
         <li>
           <a href="index.html#home">
             <p>Home</p>
           </a>
-        </li>
+        </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <li>
           <a href="index.html#about">
             <p>About Us</p>
           </a>
-        </li>
+        </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <li>
           <a href="blogpage.html">
             <p>Blogs</p>
           </a>
-        </li>
+        </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <li>
           <a href="faqpage.html">
             <p>FAQs</p>
           </a>
-        </li>
+        </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <li>
           <a href="index.html#Resource Library">
             <p>Resource Library</p>
           </a>
-        </li>
+        </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <li>
           <a href="index.html#contact">
             <p>Contact Us</p>
@@ -229,7 +234,7 @@
       </ul>
     </div>
     <div class="footer-text footer-right">
-      <p style="font-weight: 600; font-size: 15px">
+      <p style="font-weight: 600; font-size: 15px;position: absolute;left: 490px;">
         Copyright &copy;
         <script>
           document.write(new Date().getFullYear());
