added buy products link to all webpages

--- a/faqpage.html
+++ b/faqpage.html
@@ -226,6 +226,9 @@
             <p>Contact Us</p>
           </a>
         </li>
+        <li>
+          <a href="buy_products.html"><p>Buy Products</p></a>
+        </li>
       </ul>
     </div>
     <div class="footer-text footer-right">
