--- a/index.html
+++ b/index.html
@@ -497,6 +497,9 @@
           <li>
             <a href="#contact"><p>Contact Us</p></a>
           </li>
+          <li>
+            <a href="buy_products.html"><p>Buy Products</p></a>
+          </li>
         </ul>
       </div>
       <div class="footer-text footer-right">
