--- a/blogpage.html
+++ b/blogpage.html
@@ -450,6 +450,9 @@
           <li>
             <a href="index.html#contact"><p>Contact Us</p></a>
           </li>
+          <li>
+            <a href="buy_products.html"><p>Buy Products</p></a>
+          </li>
         </ul>
       </div>
       <div class="footer-text footer-right">
