changed the active content

--- a/buy_products.html
+++ b/buy_products.html
@@ -31,7 +31,7 @@
          </a>
          <i class="bx bx-menu" id="menu-icon"></i>
         <nav class="navbar active">
-          <a href="index.html#home" class="active content"
+          <a href="index.html#home"
             ><i class="fa-solid fa-house"></i> Home</a>
           <a href="index.html#about"><i class="fa-solid fa-circle-info"></i> About</a>
           <a href="blogpage.html" target="_self">
@@ -44,7 +44,7 @@
           <a href="index.html#contact" id="nav--contact"
             ><i class="fa-solid fa-phone"></i> Contact</a
           >
-          <a href="buy_products.html"
+          <a href="buy_products.html" class="active content"
             ><i class="fa fa-shopping-cart"></i>Buy Products</a
           >
           <a href="login.html">
