update about link in other files

--- a/buy_products.html
+++ b/buy_products.html
@@ -33,7 +33,7 @@
         <nav class="navbar active">
           <a href="index.html#home"
             ><i class="fa-solid fa-house"></i> Home</a>
-          <a href="index.html#about"><i class="fa-solid fa-circle-info"></i> About</a>
+          <a href="./about/about.html"><i class="fa-solid fa-circle-info"></i> About</a>
           <a href="blogpage.html" target="_self">
             <i class="fa-solid fa-blog"></i> Blogs</a
           >
@@ -312,7 +312,7 @@
             <a href="#home"><p>Home</p></a>
           </li>
           <li>
-            <a href="#about"><p>About Us</p></a>
+            <a href="./about/about.html"><p>About Us</p></a>
           </li>
           <li>
             <a href="blogpage.html"><p>Blogs</p></a>
