--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <a href="#home" class="active content"
           ><i class="fa-solid fa-house"></i> Home</a
         >
-        <a href="#about"><i class="fa-solid fa-circle-info"></i> About</a>
+        <a href="./about/about.html"><i class="fa-solid fa-circle-info"></i> About</a>
         <a href="blogpage.html" target="_self">
           <i class="fa-solid fa-blog"></i> Blogs</a
         >
@@ -126,38 +126,6 @@
             ></div>  <!--duplicate of the first image-->
             <!-- <div class="slide" style="background-image: url(./images/carousel-img-5.jpg)"></div> -->
           </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="about" id="about">
-      <!-- <div class="about-img">
-      <img src="images/png-transparent-farmer-agriculture-wheat-straw-agriculture-fictional-character-cartoon-thumbnail-fotor-bg-remover-2023122619381.png" alt="MY-IMAGE" />
-
-    </div> -->
-      <div class="video-wrapper">
-        <div class="video-overlay"></div>
-        <video class="background-video" autoplay muted loop id="aboutVideo">
-          <source src="Agriculturevideo.mp4" type="video/mp4" />
-          Your browser does not support the video tag.
-        </video>
-      </div>
-      <div class="overlay">
-        <div class="about-content">
-          <h2 class="heading">About <span>AgriLearnNetwork</span></h2>
-          <p>
-            Agrilearn Network serves as an indispensable resource, offering
-            farmers a holistic platform enriched with essential insights
-            spanning the diverse landscape of agriculture. Delving into the core
-            of farming practices, our platform provides detailed guidance on
-            agriculture techniques, in-depth knowledge on seed varieties,
-            recommendations for optimal tool usage, streamlined harvesting
-            methods, best practices for sowing, and strategic farm management
-            approaches. By encompassing a wide spectrum of topics, Agrilearn
-            Network aims to empower farmers with the comprehensive understanding
-            needed to navigate the complexities of modern agriculture
-            successfully.
-          </p>
         </div>
       </div>
     </section>
@@ -483,7 +451,7 @@
             <a href="#home"><p>Home</p></a>
           </li>
           <li>
-            <a href="#about"><p>About Us</p></a>
+            <a href="./about/about.html"><p>About Us</p></a>
           </li>
           <li>
             <a href="blogpage.html"><p>Blogs</p></a>
