--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
         <a href="index.html#home" class="active"
           ><i class="fa-solid fa-house"></i> Home</a
         >
-        <a href="index.html#about"
+        <a href="./about/about.html"
           ><i class="fa-solid fa-circle-info"></i> About</a
         >
         <a href="blogpage.html" target="_self">
@@ -171,7 +171,7 @@
             <a href="index.html#home"><p>Home</p></a>
           </li>
           <li>
-            <a href="index.html#about"><p>About Us</p></a>
+            <a href="./about/about.html"><p>About Us</p></a>
           </li>
           <li>
             <a href="blogpage.html"><p>Blogs</p></a>
