--- a/blogpage.html
+++ b/blogpage.html
@@ -43,7 +43,7 @@
         <a href="index.html#home" 
           ><i class="fa-solid fa-house"></i> Home</a
         >
-        <a href="index.html#about"><i class="fa-solid fa-circle-info"></i> About</a>
+        <a href="./about/about.html"><i class="fa-solid fa-circle-info"></i> About</a>
         <a href="blogpage.html" class="active">
           <i class="fa-solid fa-blog"></i> Blogs</a
         >
@@ -436,7 +436,7 @@
             <a href="index.html"><p>Home</p></a>
           </li>
           <li>
-            <a href="index.html#about"><p>About Us</p></a>
+            <a href="./about/about.html"><p>About Us</p></a>
           </li>
           <li>
             <a href="blogpage.html"><p>Blogs</p></a>
