--- a/faqpage.html
+++ b/faqpage.html
@@ -33,7 +33,7 @@
     <i class="bx bx-menu" id="menu-icon"></i>
     <nav class="navbar">
       <a href="index.html#home"><i class="fa-solid fa-house"></i> Home</a>
-      <a href="index.html#about"><i class="fa-solid fa-circle-info"></i> About</a>
+      <a href="./about/about.html"><i class="fa-solid fa-circle-info"></i> About</a>
       <a href="blogpage.html" target="_self"><i class="fa-solid fa-blog"></i> Blogs</a>
       <a href="index.html#Resource Library"><i class="fa-solid fa-book"></i> Resource Library</a>
       <a href="faqpage.html" class="active"><i class="fas fa-question-circle"></i>FAQs</a>
@@ -202,7 +202,7 @@
           </a>
         </li>
         <li>
-          <a href="index.html#about">
+          <a href="./about/about.html">
             <p>About Us</p>
           </a>
         </li>
